--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </style>
 </head>
 <body>
-    
+    <div class="nav">
+        <a href="../signupForm/index.html">Signup</a>
+        <a href="../signupForm/pages/details.html">Details</a>
+    </div>
     <div class="card">
         <h3 style="text-align: center; margin: 40px; padding-left: 40px; ">Student Registration Form</h3>
         <form>
