--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link rel="stylesheet" href="./assets/style.css">
     <style>
         *{
             margin: 0;
@@ -43,12 +44,13 @@
             border: 1px solid black;
             margin: 20px 70px;
         }
+        
     </style>
 </head>
 <body>
     <div class="nav">
-        <a href="../signupForm/index.html">Signup</a>
-        <a href="../signupForm/pages/details.html">Details</a>
+        <a href="./index.html">Signup</a>
+        <a href="./pages/details.html">Details</a>
     </div>
     <div class="card">
         <h3 style="text-align: center; margin: 40px; padding-left: 40px; ">Student Registration Form</h3>
