--- a/pages/details.html
+++ b/pages/details.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
+    <link rel="stylesheet" href="../assets/style.css">
+
 </head>
 <body>
+    <div class="nav">
+        <a href="../index.html">Signup</a>
+        <a href="./details.html">Details</a>
+    </div>
     <h1>About the Course</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Pariatur commodi unde labore obcaecati ea nulla in hic aperiam error voluptatem id blanditiis 
