--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="nav">
         <a href="./index.html">Signup</a>
         <a href="./pages/details.html">Details</a>
+        <a href="./pages/studentDetails.html">Student</a>
     </div>
     <div class="card">
         <h3 style="text-align: center; margin: 40px; padding-left: 40px; ">Student Registration Form</h3>
