--- a/pages/details.html
+++ b/pages/details.html
@@ -11,6 +11,7 @@
     <div class="nav">
         <a href="../index.html">Signup</a>
         <a href="./details.html">Details</a>
+        <a href="./studentDetails.html">Student</a>
     </div>
     <h1>About the Course</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
